Incorporando tablas e hipervinculos

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title></title>
+<title>Breve historia de HTML</title>
 </head>
 <body>
 <h1>Breve historia de HTML</h1>
@@ -34,13 +34,19 @@
 <p>XHTML 1.0 es una adaptación de HTML 4.01 al lenguaje XML, por lo que mantiene casi todas sus etiquetas y características, pero añade algunas restricciones y elementos propios de XML. La versión XHTML 1.1 ya ha sido publicada en forma de borrador y pretende modularizar XHTML. También ha sido publicado el borrador de XHTML 2.0, que supondrá un cambio muy importante respecto de las anteriores versiones de XHTML.</p>
 
 <ol><h2>El flujo de trabajo basico en Git es algo asi:</h2>
-
+<img src="C:\Users\00140031\primer parcial\imagenes\img1.png"/>
 <li>Iniciamos nuestro proyecto con <strong>git init</strong></li>
 <li>Damos paso <strong>git --global user.name 'nombre'</strong></li>
 <li>Verificamos el stado de nuestro proyecto con <strong>git status</strong></li>
-<
 
 </ol>
+
+
+<img src="C:\Users\00140031\primer parcial\imagenes\img2.png"/>
+<img src="C:\Users\00140031\primer parcial\imagenes\img3.png"/>
+
+<a href="tabla/mitabla.html">Ver la tabla</a>
+
 
 </body>
 </html>
